test/fail/codegen_decorator_unknown.ms
@unknown("test")
unsafe extern "C" proc test();
